[package]
name = "square"
version = "0.1.0"
authors = ["xayon40-12 <touroux.nathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha4"
glsl-to-spirv = "0.1"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
